# modules

./: CMakeLists.txt
src/: main.cpp
src/Awesome/: Awesome.cpp  module.modulemap
